--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 				<li><a id="button">LOGIN</a></li>
 			</ul>
 				<div id="back">
+						<div id="closethere"></div>
 					<div id="popup">
 						<h1>SIGN IN</h1>
 						<form id="popup_form">
